<resources>
    <string name="app_name">Quizzy</string>
    <string name="sell">Sell</string>
    <string name="quantity">Quantity in Stock:</string>
    <string name="quantity_req">Quantity in Stock <font color='#FF0000'>*</font></string>
    <string name="item_name_req">Quiz Name <font color='#FF0000'>*</font></string>
    <string name="quiz_description_req">Quiz Description <font color='#FF0000'>*</font></string>
    <string name="save_action">Save</string>
    <string name="quiz_detail_fragment_title">Quiz</string>
    <string name="add_fragment_title">Add Quiz</string>
    <string name="edit_fragment_title">Edit Quiz</string>
    <string name="price">Price</string>
    <string name="quantity_in_stock">Quantity\nIn Stock</string>
    <string name="quiz">Quiz List</string>
    <string name="delete">Delete</string>
    <string name="delete_question">Are you sure you want to delete?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="currency_symbol">$</string>
    <string name="edit_item">Edit Quiz</string>
    <string name="add_new_item">Add new Quiz</string>
    <string name="start_quiz">start quiz</string>
    <string name="add_question">Add question</string>
    <string name="question_text_req">Enter your Question</string>
    <string name="add_answer">Add Answer</string>
    <string name="add_answer_text_req">Enter answer</string>
    <string name="finish_quiz_btn_text">Finish</string>
</resources>