<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margin"
    tools:context=".ui.QuizDetailFragment">

    <TextView
        android:id="@+id/quiz_name"
        style="@style/Widget.Quizzy.TextView"
        android:layout_width="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Screwdrivers" />

    <TextView
        android:id="@+id/quiz_description"
        style="@style/Widget.Quizzy.TextView"
        android:layout_width="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quiz_name"
        tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce aliquam tristique vestibulum. Vestibulum consequat nisi facilisis nulla aliquet rhoncus. Nullam volutpat in neque id gravida. " />

    <Button
        android:id="@+id/delete_item"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/edit_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/edit_item"
        android:src="@drawable/ic_edit"
        app:layout_constraintBottom_toTopOf="@+id/delete_item"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@android:color/white" />

    <Button
        android:id="@+id/start_quiz"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/start_quiz"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quiz_description" />

</androidx.constraintlayout.widget.ConstraintLayout>


